--- a/exampleservice-boot/src/main/resources/settings.conf
+++ b/exampleservice-boot/src/main/resources/settings.conf
@@ -7,4 +7,13 @@ settings {
     http.host = ${?HTTP_HOST}
   }
 
+  authorizations {
+    token-identity-correlation = [
+      {
+        token = "this-is-the-valid-token"
+        identity = "the-valid-one"
+      }
+    ]
+  }
+
 }
