--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,6 +1,8 @@
-name = microservice-project
+name = service-project
 sbtVersion = 1.3.3
-description = Generate a structure to build microservice project.
+description = Generate a structure to build a service in scala.
+maintainer = The maintainer
 organization = com.example
 normalizedName = $name;format="lower,word"$
+projectVersion = 0.0.0-SNAPSHOT
 package = $organization$.$name;format="lower,word"$
